# midna

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-ARM  DockerfileOLD  README.md  config.toml  docker-compose.yaml  get_models.sh
src/: brightnes_image.rs  colors.rs  commands.rs  config.rs  db.rs  interaction_handeling.rs  main.rs  tickbox.rs  visual_scale.rs
src/db/: setup.sql
src/utils/: colors.rs  image_cache.rs  mod.rs
src/utils/image_processing/: mod.rs  tp_image.rs
