[package]
name = "image2nord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
image = "0.25.1"
imageproc = "0.25.0"
log = "0.4.21"
poise = "0.6.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
ttl_cache = "0.5.1"
onnxruntime = "0.0.14"
ndarray = "0.15.1"
toml = "0.8.14"
serde = "1.0"
derivative = "2.2.0"

[dependencies.serenity]
default-features = true
version = "0.12"
